Fix map icons being off center due to text direction css

--- a/scss/_unhcr_new.scss
+++ b/scss/_unhcr_new.scss
@@ -255,6 +255,7 @@ h3 {
 #mapContainer {
   height: 100%;
   clear: both;
+  direction: ltr;
 
   @media (max-width: $screen-md-min) {
     height: 75%;
